19-03-2023
    Added functionality for new users to Sign Up.
    Added functionality for existing users to login.
    Added functionality for Admin to add new dish.

20-03-2023
    Designed customer's dashboard. (It displays food items and their info)

22-03-2023
    Added checkout page

23-03-2023
    Added feature for users to update their details (Not working)

24-03-2023
    Fixed user details update feature