@@ -20,5 +20,6 @@
         <h3>Name: <%= customerName %></h3>
         <h3>Address: <%= customerAddress %></h3>
         <h3>Phone no.: <%= customerContact %></h3>
+        <a href=<%= "/placeOrder/" + userID.toString() + "/" + dishID.toString() %> >Place Order</a>
     </body>
 </html>
